# Roulette_Project

./: README.md
ImageDisplayAttempt/: CMakeLists.txt
ImageDisplayAttempt/lib/: SDL2maind.lib
ImageDisplayAttempt/src/: main.cpp  main_another_example.cpp
Roulette/: Bet.h  Bet_Check.h  BettingOptions.cpp  BettingOptions.h  CMakeLists.txt  README.md  Roulette.sln  Roulette.vcxproj  Roulette.vcxproj.filters  getBettingOptionParameters.cpp  getBettingOptionParameters.h  main.cpp  randomNumber.cpp  randomNumber.h
Roulette/include/: Bet.h  Bet_Check.h  Functions.h  Player.h
Roulette/src/: BettingOptions.cpp  EndOfGameExpression.cpp  Image.cpp  getBettingOptionParameters.cpp  initializePlayerData.cpp  main.cpp  output_DealerName.cpp  randomNumber.cpp  writePlayerDataToFile.cpp
Roulette/x64/Debug/: Roulette.exe.recipe  Roulette.ilk  Roulette.vcxproj.FileListAbsolute.txt  vc143.idb
Roulette_SingleFile_TEMP/: CMakeLists.txt  Main.cpp  Roulette_SingleFile.sln  Roulette_SingleFile.vcxproj  player_results.txt
Roulette_SingleFile_TEMP/include/: image.h
Roulette_SingleFile_TEMP/lib/: SDL2_test.lib  SDL2d.exp  SDL2d.lib
Roulette_SingleFile_TEMP/src/: Image.cpp  Image2.cpp  main.cpp
Roulette_SingleFile_TEMP/x64/Debug/: Roulette_SingleFile.exe.recipe  Roulette_SingleFile.ilk  Roulette_SingleFile.vcxproj.FileListAbsolute.txt  vc143.idb
Roulette_SingleFile_TEMP/x64/Debug/Roulette.b8c1969b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Roulette_SingleFile.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+8 files in other folders)
